Try to fix ui look on mobile.

--- a/application/static/src/scss/index.scss
+++ b/application/static/src/scss/index.scss
@@ -67,10 +67,16 @@ h5 {
     .post-container {
         grid-template-columns: repeat(2, 1fr);
     }
+
 }
 
 @media screen and (max-width: 575px) {
     .post-container {
         grid-template-columns: repeat(1, 1fr);
     }
+    .secondary-article-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(autofit, 1fr);
+    }
+
 }
